[package]
name = "euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
futures = "0.3.25"
macroquad = "0.3.25"
wgpu = "0.14.2"
winit = "0.27.5"
